--- a/.gitignore
+++ b/.gitignore
@@ -9,10 +9,10 @@ wheels/
 # Virtual environments
 .venv
 
-# Data
-data/raw/*
-!data/raw/NOTE.md
-
 # Artifacts
 *.pdf
 model/irt/output/*
+
+# Ignore raw data files
+src/pm_rank/data/raw/*.json
+src/pm_rank/data/raw/*.csv
