--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -24,6 +24,7 @@ jobs:
       - name: Build docs
         run: |
           cd docs
+          make clean 
           make html
 
       - name: Deploy to GitHub Pages
