--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -19,7 +19,7 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install sphinx sphinxawesome-theme sphinx-math-dollar myst-parser
+          pip install sphinx sphinxawesome-theme sphinx-math-dollar myst-parser sphinx-autoapi
 
       - name: Build docs
         run: |
