--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "pm_rank"
-version = "0.2.0"
+version = "0.2.1"
 description = "A toolkit for scoring and ranking prediction market forecasters."
 authors = [
     { name = "Sida Li", email = "listar2000@uchicago.edu" }
@@ -23,6 +23,7 @@ docs = [
     "sphinxawesome-theme",
     "sphinx-math-dollar",
     "myst-parser",
+    "sphinx-autoapi",
 ]
 
 full = [
