--- a/.gitignore
+++ b/.gitignore
@@ -14,6 +14,7 @@ wheels/
 *.pdf
 model/irt/output/*
 latest_predictions_df.csv
+latest_predictions_df_2.csv
 
 # Ignore raw data files
 src/pm_rank/data/raw/*.json
